update-manager (1:0.93.17) intrepid; urgency=low

  * UpdateManager/UpdateManager.py:
    - fix typo (thanks to "Richie", LP: #271139)

 --

update-manager (1:0.93.16) intrepid; urgency=low

  [ Michael Vogt ]
  * DistUpgrade/DistUpgradeController.py:
    - automatically add "relatime" to the mount options
      of ext2/ext3
  * UpdateManager/Core/MetaRelease.py:
    - fix typo (thanks to Daniel Garcia)
  * DistUpgrade/DistUpgradeCache.py:
    - fix the removal of obsolete kernel packages when the 
      old kernel abi package gets removed from -update and/or
      -security
  * UpdateManager/UpdateManager.py:
    - be more robust against server errors when fetching the
      changelogs (LP: #262982)
  * debian/control:
    - update the version dependency for python-apt, we need
      stuff from 0.7.5 (LP: #257781)
  * DistUpgrade/DistUpgradeView.py:#
    - make FuzzyTimeToStr() properly deal with plural forms
      (LP: #267234)
  
  [ Brian Murray ]
  * UpdateManager/UpdateManager.py:
    - preserve epoch in package version for changelogs at 
      launchpad.net (LP: #270527)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 16 Sep 2008 14:15:18 +0200

update-manager (1:0.93.15) intrepid; urgency=low

  * UpdateManager/Core/DistUpgradeFetcherCore.py:
    - fix incorrect import

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 15 Sep 2008 14:41:41 +0200

update-manager (1:0.93.14) intrepid; urgency=low

  * po/*.po:
    - updated to the latest launchpad translations
  * DistUpgrade/DistUpgradeGettext.py:
    - add more robust version of gettext() that does not
      crash if incorrect number arguments is passed (LP: #269379)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 15 Sep 2008 13:07:54 +0200

update-manager (1:0.93.13) intrepid; urgency=low

  * DistUpgrade/DistUpgrade.cfg:
    - better KeyDependencies for ubuntu-desktop to make the 
      detection more robust

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 12 Sep 2008 21:56:11 +0200
