@@ -21,6 +21,8 @@ KeepInstalledSection=translations
 #PostInstallScripts=./apt-autoinst-fixup.py
 RemoveObsoletes=yes
 ForcedObsoletes=esound, esound-common, slocate, ksplash-engine-moodin
+# example rule
+#PostUpgrade{Install,Remove,Purge}=evms
 
 [KernelRemoval]
 Version=2.6.24
