@@ -2,6 +2,9 @@ update-manager (1:0.93.17) intrepid; urgency=low
 
   * UpdateManager/UpdateManager.py:
     - fix typo (thanks to "Richie", LP: #271139)
+  * DistUpgrade/DistUpgradeCache.py:
+    - remove the landscape-client stub package on
+      desktop upgrades
 
  --
 
